<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, EurekaVendaFacilActivity!</string>
    <string name="app_name">Eureka! Venda Facil</string>
	<string name="produtos_pedido">Produtos</string>
	<string name="cobranca_titulos">Titulos</string>
	<string name="adicionar_produto_pedido">Adicionar produto</string>
	<string name="remover_produto_pedido">Remover produto</string>
	<string name="selecionar_cliente_pedido">Selecionar cliente</string>
	<string name="cliente_pedido">Cliente</string>
	<string name="sincroniza_produtos">Sincroniza Produtos</string>
	<string name="sincroniza_clientes">Sincroniza Clientes</string>
	<string name="sincroniza_titulos">Sincroniza Titulos</string>
	<string name="produto">Produto</string>
	<string name="cliente">Cliente</string>
	<string name="pedido">Pedido</string>
	<string name="filtro_cliente">Filtro de clientes</string>
	<string name="filtro_produto">Filtro de produtos</string>
	<string name="filtro_pedido">Filtro de pedidos</string>
	<string name="finalizar_pedido">Finalizar</string>
	<string name="configuracao">Configuração</string>
	<string name="login">Entrar</string>
	<string name="senha">Senha</string>
	<string name="usuario">Usuario</string>
	<string name="quantidade_venda">Qtd. venda</string>
	<string name="quantidade_troca">Qtd. troca</string>
	<string name="preco_produto">Preço</string>
	<string name="reais">R$</string>
	<string name="desc_max">Desc. Max.</string>
	<string name="urgente">Urgente</string>
	<string name="unidade">Unidade</string>
	<string name="estoque">Estoque</string>
	<string name="sim">Sim</string>
	<string name="nao">Não</string>
	<string name="config_url">Configurações</string>
	<string name="salvar">Salvar</string>
	<string name="contato">Contato</string>
	<string name="cidade">Cidade</string>
	<string name="bairro">Bairro</string>
	<string name="rua">Rua</string>
	<string name="numero">Número</string>
	<string name="mapa">Mapa</string>
	<string name="cadastrar_cliente">Cadastrar cliente</string>
	<string name="desconto">Desconto</string>
	<string name="tipo_pagamento">Tipo de pagamento</string>
	<string name="cobranca">Cobrança</string>
	<string name="debito">Débito</string>
	<string name="cheque">Cheque</string>
	<string name="mais">Condições de pagamento</string>
	<string name="prazo_prompt">Prazo</string>
	<string name="confirmar">Confirmar</string>
	<string name="sair">Sair</string>
	<string name="cancelar">Cancelar</string>
	<string name="total_pedido">Total</string>
	<string name="total_item_pedido">Total</string>
	<string name="preco_unitario">Preço Unit.</string>
	<string name="pedidos">Pedidos</string>
	<string name="emissao">Emissão</string>
	<string name="pagamento">Pagamento</string>
	<string name="voltar">Voltar</string>
	<string name="imagem_produto">Imagem do Produto</string>
	<string name="sincronizado_prompt">Sinc.</string>
	<string name="cobrar_titulo">Cobrar</string>
	<string name="numero_titulo">Número</string>
	<string name="data_emissao">Data Emissão</string>
	<string name="data_vencimento">Data Vencimento</string>
	<string name="valor">Valor</string>
</resources>