<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente_pedido"
        android:textColor="#372c24" />

    <EditText
        android:id="@+id/cliente_pedido"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dip"
        android:layout_marginTop="5dip"
        android:inputType="none"
        android:editable="false"
        android:hint="@string/selecionar_cliente_pedido"
        android:singleLine="true" />
	<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
	    <RadioGroup
	        android:id="@+id/produtos_titulos"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true" 
	        android:orientation="horizontal">
	
	        <RadioButton
	            android:id="@+id/produtos_radio_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:textColor="#372c24"
	            android:text="@string/produtos_pedido" />
	
	        <RadioButton
	            android:id="@+id/titulos_radio_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="false"
	            android:textColor="#372c24"
	            android:text="@string/cobranca_titulos"/>
	
	    </RadioGroup>
    </RelativeLayout>
	<ViewFlipper
	    android:id="@+id/flipper"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
	    <include android:id="@+id/first"  layout="@layout/pedido" />
	    <include android:id="@+id/second"  layout="@layout/titulo" />
	</ViewFlipper>

</LinearLayout>