<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left|center"
	android:paddingBottom="5sp"
	android:paddingTop="5sp"
	android:paddingLeft="5sp"
    android:background="@drawable/bg">
    <TextView
	    android:id="@+id/cod_cliente"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:text="texto1"
		android:textColor="#372c24"
		android:textSize="20sp"/>
	    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal" >
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/emissao"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/data_emissao"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	    	<LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/pedido"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/cod_pedido"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/urgente"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/urgente"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/pagamento"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/pagamento"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/prazo_prompt"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/prazo"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/sincronizado_prompt"
	                android:textColor="#372c24" />
	            <TextView
	                android:id="@+id/sincronizado"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
        </LinearLayout>
</LinearLayout>