<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="left|center"
	android:paddingBottom="5sp"
	android:paddingTop="5sp"
	android:paddingLeft="5sp"
    android:background="@drawable/bg">
	<TextView 
	    android:id="@+id/nome_fantasia"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:text="texto1"
	    android:textColor="#372c24"
	    android:textSize="20sp">
	</TextView>
	<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent" >

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
	    android:orientation="horizontal" >

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >

	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/contato"
	                android:textColor="#372c24" />

	            <TextView
	                android:id="@+id/contato_cliente"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >

	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/cidade"
	                android:textColor="#372c24" />

	            <TextView
	                android:id="@+id/cidade_cliente"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingLeft="5dp" >

	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/bairro"
	                android:textColor="#372c24" />

	            <TextView
	                android:id="@+id/bairro_cliente"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="texto1"
	                android:textColor="#372c24" />
	        </LinearLayout>
	    </LinearLayout>

	</LinearLayout>

	    <ImageButton
	        android:id="@+id/mapa_image_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:focusable="false"
	        android:contentDescription="@string/mapa"
	        android:src="@drawable/referencias" />

	</RelativeLayout>
	
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:orientation="horizontal" >
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="5dp"        
	        android:orientation="vertical" >
            <TextView 
		        android:layout_width="match_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="@string/rua"/>
			<TextView 
			    android:id="@+id/rua_cliente"
		        android:layout_width="match_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#372c24"
		  		android:text="texto1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>